# word-trainer-web

./: .gitignore  README.md  clean_meanings.py  index.html  open_web.bat  register_desktop_pet_protocol.bat  run_desktop_pet.bat  unregister_desktop_pet_protocol.bat
.github/workflows/: pages.yml
desktop-pet/: .gitignore  CMakeLists.txt  README.md  config.json  wsp.code-workspace
desktop-pet/scripts/: generate_ppt.py  process_ppt_replacement.py  remove_bg.py
desktop-pet/src/: App.cpp  App.h  main.cpp  resource.rc
desktop-pet/src/api/: ApiClient.cpp  ApiClient.h
desktop-pet/src/monitor/: ScreenMonitor.cpp  ScreenMonitor.h
desktop-pet/src/pet/: Pet.cpp  Pet.h  PetMood.h  PetStyle.h  SpeechBubble.cpp  SpeechBubble.h
desktop-pet/src/util/: Config.h  Logger.h  SoundPlayer.cpp  SoundPlayer.h  StringUtils.cpp  StringUtils.h
desktop-pet/src/win/: D2DRenderer.cpp  D2DRenderer.h  PetWindow.cpp  PetWindow.h  WebViewHostWindow.cpp  WebViewHostWindow.h
desktop-pet/src/word/: WordTrainerService.cpp  WordTrainerService.h
docs/: cpp_word_trainer_presentation.pptx  speech_script.md
web/: app.js  index.html  styles.css
web/data/: cet-vocab.js  phonetics.js
